force-app/main/default/objects/CLQ_Payment_Received__c/CLQ_Payment_Received__c.object-meta.xml
<CustomObject>
    <label>Payment Received</label>
    <nameField>
        <displayFormat>Pay-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Received</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>