force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_Amount__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Amount__c</fullName>
    <label>Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>