force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_CBOSS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CBOSS_Order_Number__c</fullName>
    <label>CBOSS Order Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>