force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_CBOSS_Payment_Settle_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CBOSS_Payment_Settle_Date__c</fullName>
    <label>CBOSS Payment Settle Date</label>
    <type>Date</type>
</CustomField>