force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CLQ_External_Id__c</fullName>
    <description>This field is used an External ID for Payment Received object.</description>
    <label>External_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>