force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_OCLQS_UID__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OCLQS_UID__c</fullName>
    <label>OCLQS UID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>