force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>