force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_Payment_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Payment_Receive_Date__c</fullName>
    <label>Payment Receive Date</label>
    <type>Date</type>
</CustomField>