force-app/main/default/objects/CLQ_Payment_Received__c/fields/CLQ_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Payments Received</relationshipLabel>
    <relationshipName>Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>