force-app/main/default/objects/CLQ_Payment_Received__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Payment_Status__c</columns>
    <columns>CLQ_Payment_Method__c</columns>
    <columns>CLQ_Payment_Receive_Date__c</columns>
    <columns>CLQ_OCLQS_UID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>